first working version (can be improved)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: squiggly_slider
 description: Flutter Package to add the Squiggly Seekbar (introduced in Android 13 for the Media Player) as a Widget 
-version: 0.0.1
+version: 0.0.1+1
 homepage:
 
 environment:
