--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: squiggly_slider
 description: Flutter Package to add the Squiggly Seekbar (introduced in Android 13 for the Media Player) as a Widget 
-version: 1.0.2
+version: 1.0.3
 homepage: "https://github.com/hannesgith/squiggly_slider"
 repository: "https://github.com/hannesgith/squiggly_slider"
 issue_tracker: "https://github.com/hannesgith/squiggly_slider/issues"
@@ -9,7 +9,7 @@ screenshots:
    path: "assets/sample.gif"
 
 environment:
-  sdk: '>=2.19.2'
+  sdk: '>=2.19.2 < 3.20.0'
   flutter: ">=1.17.0"
 
 dependencies:
