--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   publish:
     permissions:
+      contents: write # required to create release
       id-token: write # Required for authentication using OIDC
     runs-on: ubuntu-latest
     steps:
@@ -42,3 +43,6 @@ jobs:
           name: ${{ github.ref_name }}
           body: '[See changelog on pub.dev](${{ env.RELEASE_NOTES }})'
           prerelease: ${{ env.IS_PRERELEASE }}
+          files: | 
+            CHANGELOG.md
+
