--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  squiggly_slider: ^1.0.0
+  squiggly_slider:
+    path: ..
 
 dev_dependencies:
   flutter_test:
